--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>photo-editor</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="d-flex justify-content-around">
+        <div><div class="btn-group btn-group-toggle" data-toggle="buttons">
+            <label class="btn btn-secondary active">
+              <input type="radio" name="options" id="option1" checked> first photo
+            </label>
+            <label class="btn btn-secondary">
+              <input type="radio" name="options" id="option2"> second photo
+            </label>
+          </div></div>
+        <div><button type="button" class="btn btn-secondary">black&white</button></div>
+        <div><button type="button" class="btn btn-secondary">border radius</button></div>
+        <div><button type="button" class="btn btn-secondary">opacity</button></div>
+        <div><select class="custom-select">
+                <option selected>size</option>
+                <option value="1">+10px</option>
+                <option value="2">+20px</option>
+                <option value="3">+30px</option>
+            </select>
+        </div>
+        <div><select class="custom-select">
+                <option selected>border</option>
+                <option value="1">thick</option>
+                <option value="2">skinny</option>
+            </select>
+        </div>
+        <div><button type="button" class="btn btn-outline-danger">reset</button></div>
+    </div>
     <script src="./script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
