--- a/index.html
+++ b/index.html
@@ -2,54 +2,71 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>photo editor</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>photo editor</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Photo editor</span>
-      </nav>
-    <div class="d-flex justify-content-around buttons">
-        <div><div class="btn-group btn-group-toggle" data-toggle="buttons">
-            <label class="btn btn-secondary first-photo">
-              <input type="radio" name="options" id="option1" checked> first photo
-            </label>
-            <label class="btn btn-secondary second-photo">
-              <input type="radio" name="options" id="option2"> second photo
-            </label>
-          </div></div>
-        <div><button type="button" class="btn btn-secondary black-white">black&white</button></div>
-        <div><button type="button" class="btn btn-secondary border-radius">border radius</button></div>
-        <div><button type="button" class="btn btn-secondary opacity">opacity</button></div>
-        <div><select class="custom-select">
-                <option selected>size</option>
-                <option value="1" class = "ten-larger">+10px</option>
-                <option value="2" class = "twenty-larger">+20px</option>
-                <option value="3" class = "thirty-larger">+30px</option>
-            </select>
-        </div>
-        <div><select class="custom-select">
-                <option selected>border</option>
-                <option value="1">thick</option>
-                <option value="2">skinny</option>
-            </select>
-        </div>
-        <div><button type="button" class="btn btn-outline-danger reset">reset</button></div>
+  <nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">Photo editor</span>
+  </nav>
+  <div class="input-group mb-3">
+    <div class="custom-file">
+      <input type="file" class="custom-file-input" id="inputGroupFile02">
+      <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Choose file</label>
     </div>
-    <div class="container">
-        <div class="row">
-        <div class="col-md-6"><img class = "guitarist-img" src="./img/guitarist.jpg" alt=""></div>
-        </div>
+    <div class="input-group-append">
+      <span class="input-group-text" id="inputGroupFileAddon02">Upload</span>
     </div>
-    <script src="./script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </div>
+  <div class="d-flex justify-content-around buttons">
+    <div>
+      <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary first-photo">
+          <input type="radio" name="options" id="option1" checked> first photo
+        </label>
+        <label class="btn btn-secondary second-photo">
+          <input type="radio" name="options" id="option2"> second photo
+        </label>
+      </div>
+    </div>
+    <div><button type="button" class="btn btn-secondary black-white">black&white</button></div>
+    <div><button type="button" class="btn btn-secondary border-radius">border radius</button></div>
+    <div><button type="button" class="btn btn-secondary opacity">opacity</button></div>
+    <div><select class="custom-select">
+        <option selected>size</option>
+        <option value="1" class="ten-larger">+10px</option>
+        <option value="2" class="twenty-larger">+20px</option>
+        <option value="3" class="thirty-larger">+30px</option>
+      </select>
+    </div>
+    <div><select class="custom-select">
+        <option selected>border</option>
+        <option value="1">thick</option>
+        <option value="2">skinny</option>
+      </select>
+    </div>
+    <div><button type="button" class="btn btn-outline-danger reset">reset</button></div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6"><img class="guitarist-img" src="./img/guitarist.jpg" alt=""></div>
+    </div>
+  </div>
+  <script src="./script.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
