--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6"><img class="guitarist-img" src="./img/guitarist.jpg" alt=""></div>
+      <div class="col-md-6"><canvas></canvas></div>
     </div>
   </div>
   <script src="./script.js"></script>
