--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-6"><img class="guitarist-img" src="./img/guitarist.jpg" alt=""></div>
+      <div class="col-md-6 first-image"></div>
       <div class="col-md-6"><canvas></canvas></div>
     </div>
   </div>
