--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 first-image"></div>
-      <div class="col-md-6"><canvas></canvas></div>
+      <div class="col-md-6 second-image"></div>
     </div>
   </div>
   <script src="./script.js"></script>
